<resources>
    <string name="app_name">Yetlibla</string>
    <string name="Wheretoeat">search here</string>
    <string name="top_icon">TOP ICON</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="or">OR</string>
    <string name="google_icon">google icon</string>
    <string name="facebook_icon">facebook icon</string>
    <string name="new_user_register_now">New User? Register Now</string>
    <string-array name="RESTAURANTS">
        <item>Sample 1</item>
        <item>Sample 2</item>
        <item>Sample 3</item>
        <item>Sample 4</item>
    </string-array>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>